@@ -54,6 +54,9 @@ Format:
 * what is entry type 0x000b ?
 * why does Windows hide the last 4096 bytes of the volume?
 
+20140405
+* worked on setup.py
+
 20140404
 * worked on tests
 
